latex2mmlc/tests/snapshots/wiki_test__wiki040.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\cap, \\Cap, \\sqcap, \\bigcap"
---
<math>
    <mo>∩</mo>
    <mo>,</mo>
    <mo>⋒</mo>
    <mo>,</mo>
    <mo>⊓</mo>
    <mo>,</mo>
    <mo>⋂</mo>
</math>
