latex2mmlc/tests/snapshots/wiki_test__wiki041.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\cup, \\Cup, \\sqcup, \\bigcup, \\bigsqcup, \\uplus, \\biguplus"
---
<math>
    <mo>∪</mo>
    <mo>,</mo>
    <mo>⋓</mo>
    <mo>,</mo>
    <mo>⊔</mo>
    <mo>,</mo>
    <mo>⋃</mo>
    <mo>,</mo>
    <mo>⨆</mo>
    <mo>,</mo>
    <mo>⊎</mo>
    <mo>,</mo>
    <mo>⨄</mo>
</math>
