latex2mmlc/tests/snapshots/wiki_test__wiki042.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\setminus, \\smallsetminus, \\times"
---
<math>
    <mo>∖</mo>
    <mo>,</mo>
    <mo>﹨</mo>
    <mo>,</mo>
    <mo>×</mo>
</math>
