latex2mmlc/tests/snapshots/wiki_test__wiki043.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\subset, \\Subset, \\sqsubset"
---
<math>
    <mo>⊂</mo>
    <mo>,</mo>
    <mo>⋐</mo>
    <mo>,</mo>
    <mo>⊏</mo>
</math>
