latex2mmlc/tests/snapshots/wiki_test__wiki044.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\supset, \\Supset, \\sqsupset"
---
<math>
    <mo>⊃</mo>
    <mo>,</mo>
    <mo>⋑</mo>
    <mo>,</mo>
    <mo>⊐</mo>
</math>
