latex2mmlc/tests/snapshots/wiki_test__wiki049.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "=, \\ne, \\neq, \\equiv, \\not\\equiv"
---
<math>
    <mo>=</mo>
    <mo>,</mo>
    <mo>≠</mo>
    <mo>,</mo>
    <mo>≠</mo>
    <mo>,</mo>
    <mo>≡</mo>
    <mo>,</mo>
    <mo>≡</mo>
</math>
