latex2mmlc/tests/snapshots/wiki_test__wiki050.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\doteq, \\doteqdot, \\overset{\\underset{\\mathrm{def}}{}}{=}, :="
---
<math>
    <mo>≐</mo>
    <mo>,</mo>
    <mo>≑</mo>
    <mo>,</mo>
    <mover>
        <mo>=</mo>
        <munder>
            <mrow>
            </mrow>
            <mi>def</mi>
        </munder>
    </mover>
    <mo>,</mo>
    <mo>≔</mo>
</math>
