latex2mmlc/tests/snapshots/wiki_test__wiki053.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "<, \\nless, \\ll, \\not\\ll, \\lll, \\not\\lll, \\lessdot"
---
<math>
    <mo>&lt;</mo>
    <mo>,</mo>
    <mo>≮</mo>
    <mo>,</mo>
    <mo>≪</mo>
    <mo>,</mo>
    <mo>≪</mo>
    <mo>,</mo>
    <mo>⋘</mo>
    <mo>,</mo>
    <mo>⋘</mo>
    <mo>,</mo>
    <mo>⋖</mo>
</math>
