latex2mmlc/tests/snapshots/wiki_test__wiki061.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\prec, \\nprec, \\preceq, \\npreceq, \\precneqq"
---
<math>
    <mo>≺</mo>
    <mo>,</mo>
    <mo>⊀</mo>
    <mo>,</mo>
    <mo>⪯</mo>
    <mo>,</mo>
    <mo>⋠</mo>
    <mo>,</mo>
    <mo>⪵</mo>
</math>
