latex2mmlc/tests/snapshots/wiki_test__wiki062.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\succ, \\nsucc, \\succeq, \\nsucceq, \\succneqq"
---
<math>
    <mo>≻</mo>
    <mo>,</mo>
    <mo>⊁</mo>
    <mo>,</mo>
    <mo>⪰</mo>
    <mo>,</mo>
    <mo>⋡</mo>
    <mo>,</mo>
    <mo>⪶</mo>
</math>
