latex2mmlc/tests/snapshots/wiki_test__wiki063.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\preccurlyeq, \\curlyeqprec"
---
<math>
    <mo>≼</mo>
    <mo>,</mo>
    <mo>⋞</mo>
</math>
