latex2mmlc/tests/snapshots/wiki_test__wiki064.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\succcurlyeq, \\curlyeqsucc"
---
<math>
    <mo>≽</mo>
    <mo>,</mo>
    <mo>⋟</mo>
</math>
